add tmux to run app.py in the background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<h1><CENTER>Fasion MNIST</CENTER></h1>
+	<h1><CENTER>Fashion MNIST</CENTER></h1>
 
 	<!-- <form action="upload.php" method="post" enctype="multipart/form-data">
     Select image to upload:
